imagenes y tablas estaticas

--- a/proyectoabdbook/visualization_notebooks/descriptive_analysis.ipynb
+++ b/proyectoabdbook/visualization_notebooks/descriptive_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#FUNCTIONS\n",
+    "\n",
+    "#save graph as image(png)\n",
+    "def save_graph_image(name:str):\n",
+    "    save_name = name\n",
+    "    # Specify the directory and filename\n",
+    "    save_path = str(Path.cwd().parent /'graficas' / save_name)\n",
+    "    # Check if the file already exists, and remove it if so\n",
+    "    if os.path.exists(save_path):\n",
+    "        os.remove(save_path)  # Remove the existing file\n",
+    "    # Save the plot to the specified path\n",
+    "    plt.savefig(save_path, dpi=300)\n",
+    "    # Optionally, you can print a message to confirm the save\n",
+    "    print(f\"Graph saved to {save_path}\")\n",
     "\n",
     "#Convert dict to Markdown table\n",
     "def dict_to_markdown(data):\n",
@@ -149,9 +162,20 @@
     "        rows.append(row)\n",
     "    return \"\\n\".join([headers, separator] + rows)\n",
     "\n",
-    "#Convert dict to Dataframe table\n",
-    "def dict_to_dataframe_table(data:dict,cols_key:str):\n",
+    "#Convert dict to Dataframe table, save it so .csv\n",
+    "def dict_to_dataframe_table(data:dict,cols_key:str,save_name:str):\n",
+    "    save_path = str(Path.cwd().parent / 'tablas' /save_name)\n",
+    "    # Check if the directory exists, create it if not\n",
+    "    os.makedirs(os.path.dirname(save_path), exist_ok=True)\n",
+    "\n",
     "    data_keys = [*data]\n",
+    " \n",
+    "    subset_data = {k: data[k] for k in data_keys}\n",
+    "    df = pd.DataFrame.from_dict(subset_data, orient='index')\n",
+    "    # Save the DataFrame to a CSV file\n",
+    "    df.to_csv(save_path, index=True)\n",
+    "    print(f\"Data saved to {save_path}\")\n",
+    "\n",
     "    data_keys.remove(cols_key)\n",
     "    subset_data = {k: data[k] for k in data_keys}\n",
     "    return pd.DataFrame.from_dict(subset_data, orient='index', columns=data[cols_key])\n",
@@ -170,7 +194,7 @@
     "    asim = momento_3*(1/(std**3))\n",
     "    return asim\n",
     "\n",
-    "#convert unix time to days, hours, minutes\n",
+    "#convert unix time to days, hours, minutes, short format\n",
     "def convert_time(duration):\n",
     "    days = int(duration//86400)\n",
     "    hours = int((duration%86400)//3600)\n",
@@ -178,7 +202,7 @@
     "    return f\"{days}d{hours}h{minutes}m\"\n",
     "\n",
     "def format_time(duration,pos):\n",
-    "    #convert unix time to days, hours, minutes\n",
+    "    #convert unix time to days, hours, minutes, readable format\n",
     "    minutes = round((duration%3600)/60,10)\n",
     "    hours = int((duration%86400)//3600)\n",
     "    if duration//86400 > 0: #if days\n",
@@ -211,7 +235,7 @@
     "        'IQR': IQR\n",
     "    }\n",
     "\n",
-    "    return resultado"
+    "    return resultado\n"
    ]
   },
   {
@@ -273,9 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\salary_cent.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -332,7 +363,7 @@
        "Salario mínimo     87412   76500.0  100000.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +388,7 @@
     "mode_salary_min = min_salary_insights['salary'].mode()\n",
     "\n",
     "\n",
-    "cent_data = {\n",
+    "cent_data_salary = {\n",
     "    'Medida': ['Promedio', 'Mediana', 'Moda'],\n",
     "    'Salario medio': [int(mean_salary), median_salary, float(mode_salary[0])],\n",
     "    'Salario máximo': [int(mean_salary_max), median_salary_max, float(mode_salary_max[0])],\n",
@@ -371,7 +402,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(cent_data,'Medida')\n"
+    "dict_to_dataframe_table(cent_data_salary,'Medida','salary_cent.csv')\n"
    ]
   },
   {
@@ -383,9 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\salary_disp.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -455,7 +493,7 @@
        "Salario mínimo                  6.717392  153.637039  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +545,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(disp_data,'Medida')"
+    "dict_to_dataframe_table(disp_data,'Medida','salary_disp.csv')"
    ]
   },
   {
@@ -519,9 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\salary_quant.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -582,7 +627,7 @@
        "Salario mínimo  51920.0   76500.0  110000.0                58080.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +651,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(quant_data,'Medida')"
+    "dict_to_dataframe_table(quant_data,'Medida','salary_quant.csv')"
    ]
   },
   {
@@ -835,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,9 +897,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\views_apps_cent.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -904,7 +956,7 @@
        "Número de aplicaciones    12.036      3.0   1.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +1016,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(cent_data_views_apps,'Medida')"
+    "dict_to_dataframe_table(cent_data_views_apps,'Medida','views_apps_cent.csv')"
    ]
   },
   {
@@ -976,9 +1028,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\views_apps_disp.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1038,7 +1097,7 @@
        "Número de aplicaciones                     9.604   157.131  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1186,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(disp_data_views_apps,'Medida')"
+    "dict_to_dataframe_table(disp_data_views_apps,'Medida','views_apps_disp.csv')"
    ]
   },
   {
@@ -1139,9 +1198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\views_apps_quant.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1194,7 +1260,7 @@
        "Número de aplicaciones  1.0  3.0   9.0                    8.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1282,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(quant_data_views_apps,'Medida')"
+    "dict_to_dataframe_table(quant_data_views_apps,'Medida','views_apps_quant.csv')"
    ]
   },
   {
@@ -1594,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,9 +1684,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\duration_cent.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1663,7 +1736,7 @@
        "Duración de la publicación  34d17h0.5m  12d15h3.3m  0d18h36.7m"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1762,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(cent_data_duration,'Medida')"
+    "dict_to_dataframe_table(cent_data_duration,'Medida','duration_cent.csv')"
    ]
   },
   {
@@ -1701,9 +1774,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\duration_disp.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1756,7 +1836,7 @@
        "Duración de la publicación      6.56  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1876,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(disp_data_duration,'Medida')"
+    "dict_to_dataframe_table(disp_data_duration,'Medida','duration_disp.csv')"
    ]
   },
   {
@@ -1808,9 +1888,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to c:\\Users\\Sarah\\Code\\ProyectoABD\\proyectoabdbook\\tablas\\duration_quant.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1858,7 +1945,7 @@
        "Duración de la publicación            37d1h43.3m  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1965,7 @@
     "#display(Markdown(markdown_table))\n",
     "\n",
     "# Display pandas dataframe table\n",
-    "dict_to_dataframe_table(quant_data_duration,'Medida')"
+    "dict_to_dataframe_table(quant_data_duration,'Medida','duration_quant.csv')"
    ]
   },
   {
